	- Add better environmental variable handling. By default it will now only pass certain 
	  whitelisted variables into the data store. If BB_PRESERVE_ENV is set bitbake will use
	  all variable from the environment. If BB_ENV_WHITELIST is set, that whitelist will be
	  used instead of the internal bitbake one. Alternatively, BB_ENV_EXTRAWHITE can be used
	  to extend the internal whitelist.

Changes in Bitbake 1.8.0:
	- Release 1.7.x as a stable series

Changes in BitBake 1.7.x:
	- Major updates of the dependency handling and execution
	  of tasks. Code from bin/bitbake replaced with runqueue.py
	  and taskdata.py
	- New task execution code supports multithreading with a simplistic
	  threading algorithm controlled by BB_NUMBER_THREADS
	- Change of the SVN Fetcher to keep the checkout around
	  courtsey of Paul Sokolovsky (#1367)
	- PATH fix to bbimage (#1108)
	- Allow debug domains to be specified on the commandline (-l)
	- Allow 'interactive' tasks
	- Logging message improvements
	- Drop now uneeded BUILD_ALL_DEPS variable
	- Add support for wildcards to -b option
	- Major overhaul of the fetchers making a large amount of code common
	  including mirroring code
	- Fetchers now touch md5 stamps upon access (to show activity)
	- Fix -f force option when used without -b (long standing bug)
	- Add expand_cache to data_cache.py, caching expanded data (speedup)
	- Allow version field in DEPENDS (ignored for now)
	- Add abort flag support to the shell
	- Make inherit fail if the class doesn't exist (#1478)
	- Fix data.emit_env() to expand keynames as well as values
	- Add ssh fetcher
	- Add perforce fetcher
	- Make PREFERRED_PROVIDER_foobar defaults to foobar if available
	- Share the parser's mtime_cache, reducing the number of stat syscalls
	- Compile all anonfuncs at once! 
	  *** Anonfuncs must now use common spacing format ***
	- Memorise the list of handlers in __BBHANDLERS and tasks in __BBTASKS