@@ -1,3 +1,9 @@
+PREMIRRORS_append () {
+ftp://.*/.*    http://pokylinux.org/sources/
+http://.*/.*   http://pokylinux.org/sources/
+https://.*/.*   http://pokylinux.org/sources/
+}
+
 MIRRORS_append () {
 ftp://.*/.*    http://pokylinux.org/sources/
 http://.*/.*   http://pokylinux.org/sources/
