@@ -72,5 +72,6 @@ do_configure_append () {
 
 do_install () {
 	autotools_do_install
+	rm -fr ${D}/var/cache
 }
 
