@@ -59,6 +59,7 @@ Changes in BitBake 1.8.x:
 	  all variable from the environment. If BB_ENV_WHITELIST is set, that whitelist will be
 	  used instead of the internal bitbake one. Alternatively, BB_ENV_EXTRAWHITE can be used
 	  to extend the internal whitelist.
+	- When SRCREV autorevisioning for a recipe is in use, don't cache the recipe
 
 Changes in BitBake 1.8.10:
 	- Psyco is available only for x86 - do not use it on other architectures.
