@@ -154,6 +154,7 @@ Changes in Bitbake 1.9.x:
 	  all variable from the environment. If BB_ENV_WHITELIST is set, that whitelist will be
 	  used instead of the internal bitbake one. Alternatively, BB_ENV_EXTRAWHITE can be used
 	  to extend the internal whitelist.
+	- When SRCREV autorevisioning for a recipe is in use, don't cache the recipe
 
 Changes in Bitbake 1.8.0:
 	- Release 1.7.x as a stable series
